--- a/webFramework/index.html
+++ b/webFramework/index.html
@@ -1,6 +1,8 @@
 <html>
-	<body>
-		<script src="./src/index.ts"></script>
-	</body>
-</html>
 
+<body>
+	<div id="root"></div>
+	<script src="./src/index.ts"></script>
+</body>
+
+</html>
